--- a/Vinted/src/main/resources/application.properties
+++ b/Vinted/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/prova
+spring.datasource.url=jdbc:postgresql://localhost:5432/vinted
 spring.datasource.username=postgres
-spring.datasource.password=220733
+spring.datasource.password=Polito2008
 spring.datasource.initialize=true
